--- a/sass/pages/_affiliate.scss
+++ b/sass/pages/_affiliate.scss
@@ -75,6 +75,7 @@
 
 // affiliate-position css start
 #affiliate-position{
+    margin-top: $space-sec-xxl;
     margin-bottom: $margin-section-title;
     .levels{
         .card{
