--- a/sass/pages/_shopping.scss
+++ b/sass/pages/_shopping.scss
@@ -2,140 +2,163 @@
 @use "../base/index" as *;
 
 
-#find-category{ margin-top: 6.875rem;
-    .container{
-        .find-category-wrapping{
-            .category-left{ 
-                width: 400px;
-                margin-right: $margin-max;
-                position: relative;
-                .all-category{ 
-                position: relative;
 
-                    .category-title{
-                        background-color: $bg-primary-light;
-                        color: $title-color;
-                       
+
+
+
+#find-category{
+    margin-top: 6.875rem;
+
+    .category-left{ 
+        // width: 400px;
+        // margin-right: $margin-max;
+        // position: relative;
+        background-color: $body-color;
+        .category-title{
+            background-color: $bg-primary-light;
+            color: $title-color;
+           
+            i{
+                color: $primary-color;
+                padding-right: $padding-normal;
+                padding-left: $padding-normal;
+            }
+        }
+        .category-item{
+            .main-category{ 
+                margin-left: -$padding-min;
+                position: relative;
+                li{
+                    padding-top: $padding-min-extra;
+                    padding-bottom: $padding-min-extra;
+                    &:hover .sub-category{
+                        display: initial;
+                    }
+
+                    &:hover{ 
+                        color: $title-color !important;
+                        background-color: $bg-color;
+                        
                         i{
-                            color: $primary-color;
-                            padding-right: $padding-normal;
-                            padding-left: $padding-normal;
+                            transform: scale(1.3);
                         }
                     }
-                    .category-item{
-                        .main-category{ 
-                            margin-left: -$padding-min;
-                            position: relative;
-                            li{
-                                padding-top: $padding-min-extra;
-                                padding-bottom: $padding-min-extra;
-                                &:hover .sub-category{
-                                    display: initial;
-                                }
-
-                                &:hover{ 
-                                    color: $title-color;
-                                    background-color: $bg-color;
-                                    
-                                    i{
-                                        transform: scale(1.3);
-                                    }
-                                }
-                                a{
-                                    color: $text-color;
-                                    font-size: $text-font-size;
-                                    
-                                    
-                                    i{
-                                        color: $primary-color-light;
-                                        padding-right: $padding-min;
-                                        
-                                    }
-                                }
+                    a{
+                        color: $text-color;
+                        font-size: $text-font-size;
+                        
+                        
+                        i{
+                            color: $primary-color;
+                            padding-right: $padding-min;
+                            
+                        }
+                    }
+                }
+                
+                .sub-category{ 
+                    display: none;
+                    padding: $padding-normal;
+                    position: absolute;
+                    left: 13rem;
+                    width: 14rem;
+                    background-color: $body-color;
+                    li{
+                        a{
+                        color: $text-color;
+                        font-size: $text-font-size;
+                        
+                        }
+                        &:hover { 
+                            color: $title-color !important;
+                            background-color: $bg-color;
+                          
+                            i{
+                                transform: scale(1.3);
                             }
                             
-                            .sub-category{ 
-                                display: none;
-                                padding: $padding-normal;
-                                position: absolute;
-                                left: 12.5rem;
-                                width: 14rem;
-                                background-color: $body-color;
-                                li{
-                                    a{
-                                    color: $text-color;
-                                    font-size: $text-font-size;
-                                    
-                                    }
-                                }
-                            }
-                        }
-                        .see-more{
-                            // padding-left: $padding-section-title;
                         }
                     }
                 }
             }
-
-            .search-right{ 
-                width: 55rem;
-                .top-cover{ height: 31rem;
-                    background: linear-gradient(0deg, rgba(29 29 29 / 70%), rgba(29 29 29 / 70%)), url(../image/boxivew-top-cover-photo.jpg);
-                    background-repeat: no-repeat;
-                    background-size: cover;
-                    .top-cover-wrapping{ 
-                        height: 30.25rem;
-                        .search{ 
-                        
-                            .search-title{
-                                color: $heading-color-light;
-                                // width: 57.25rem;
-                               
-            
-                            }
-                            .search-box{background-color: $body-color;
-                                        border-radius: 3rem;
-                                        width: 40rem;
-                                .search-key{ 
-                                        input{
-                                            border-radius: 3rem;
-                                            border: none;
-                                            
-                                        
-                                        }
-                                }
-                                .search-city{ 
-                                    border-left: 2px solid $line-color !important;
-                                    color: $text-color !important;
-                                    // margin-left: 12rem;
-            
-                                    
-                                }
-                                .search-category{ 
-                                    border-left: 2px solid $line-color !important;
-                                    color: $text-color !important;
-                                    // margin-left: 6rem;
-                                    
-                                }
-                                .search-btn{
-                                    button{
-                                        background-color: $primary-color !important;
-                                        color: $btn-color-light;
-                                        border-radius: 3rem;
-                                        // margin-left: 6rem;
-                                        
-            
-                                    }
-                                }
-                            }
-                        }
-            
-                    }
-        }
+            .see-more{
+                margin-left: 2.8rem;
+            }
+            .ctg-close-btn{
+                margin-right: 1.6rem;
+                border: 1px solid $primary-color;
+                padding: 2px 8px;
+                display: none;
             }
         }
     }
+
+    .cover-wrap { 
+        height: 31rem;
+        background: linear-gradient(0deg, rgba(29 29 29 / 70%), rgba(29 29 29 / 70%)), url(../image/boxivew-top-cover-photo.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        .search-wrap{
+            height: 100%;
+            .search{ 
+
+                .search-title{
+                    color: $heading-color-light;
+                    max-width: 57.25rem;
+                
+    
+                }
+                .search-box{background-color: $body-color;
+                            // border-radius: 3rem;
+                            // width: 57.25rem;
+                            max-width: 57.25rem;
+                    .search-key{ 
+                        
+                    }
+                    .search-city{ 
+                        // border-left: 2px solid $line-color !important;
+                    }
+                    .search-category{ 
+                        // border-left: 2px solid $line-color !important;
+                    
+                    }
+                    .search-btn{
+                        
+                    }
+                }
+            }
+        }
+
+        .all-ctg-btn{
+            margin-top: -5rem !important;
+            // display: none;
+            visibility: hidden;
+        }
+
+        
+
+    }
+
 }
+
+
+
+
+// trend-products
+#trend-products{
+    
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 // Recomended products css start
@@ -146,3 +169,92 @@
     
 }
 // Recomended products css end
+
+
+
+
+
+
+
+
+
+// media start
+
+@media (max-width: 576px){
+    
+    
+}
+@media (max-width: 768px){
+    #find-category{ margin-top: 3.5rem;
+        .sub-category{
+            margin-left: -2.6rem;
+            width: 12.5rem !important;
+        }
+        .search-title{
+            margin-top: -8rem ;
+            margin-top: 4rem !important;
+        }
+        .search-box{
+            // display: none;
+            max-width: 20.4rem !important;
+            margin-left: .4rem;
+            
+
+            select{
+                font-size: .95rem !important;
+            }
+              
+        }
+        .all-ctg-btn{
+            // margin-top: -5rem !important;
+            // position: absolute;
+            // bottom: 2rem;
+        }
+        .cover-wrap{
+            height: 28rem;
+        }
+
+        .active{
+            display: block ;
+        }
+        .disable{
+            display: none;
+        }
+      
+    }
+    
+}
+
+@media (max-width: 992px){
+    #find-category{
+        .category-left{
+            display: none;
+            margin-top: -31rem;
+        }
+        .active{
+            display: block !important;
+        }
+        .disable{
+            display: none;
+        }
+        .search-box{
+            width: 40rem;
+        }
+
+        .all-ctg-btn{
+            visibility: visible !important;
+        }
+        .ctg-close-btn{
+            display: initial !important;
+        }
+    }
+}
+
+
+@media (max-width: 1200px){
+    #find-category{
+        .search-box{
+            width: 40rem;
+        }
+    }
+}
