--- a/sass/pages/_single.scss
+++ b/sass/pages/_single.scss
@@ -16,9 +16,9 @@
             }
 
             .single-product{
-                .image-view{
+                // .image-view{
 
-                }
+                // }
                 .add-cart, .button, .button-outline {
                     font-size: .85rem ;
                 }
