--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1484,3 +1484,5 @@ nav{
 
 
 @import url(../node_modules/bootstrap/dist/css/bootstrap.css);
+
+@import url(../node_modules/bootstrap/scss/bootstrap.scss);
