--- a/sass/pages/_myCart.scss
+++ b/sass/pages/_myCart.scss
@@ -2,10 +2,13 @@
 @use "../base/index" as *;
 
 
+
+// my cart classes
 .return-shop{
     transition: .3s;
     &:hover{
         i{transform: scale(1.2) !important;}
+        a{text-decoration: underline !important;}
     }
     a{color: $primary-color;
 
@@ -39,6 +42,9 @@
         }
     }
 }
+.total{font-weight: 600; color: $title-color;}
+
+
 // my cart start
 
 .my-cart{
@@ -75,17 +81,17 @@
             background-color: $body-color;
             .table{
                 font-size: 1rem;
-                width: 1100px;
+                width: 64rem;
                 .thead{ font-size: .9rem;}
                 .cart-item-name{
-                    width: 480px;
+                    max-width: 480px;
                 }
-                .total{font-weight: 600; color: $title-color;}
+                
                 .qty-layout{
                     span{
                         // border: 1px solid $text-color ;
                         background-color: $bg-color;
-                        padding: .255rem .6rem;
+                        padding: .2rem .6rem;
                         border-radius: 50%;
                         // font-size: .9rem;
                         // font-weight: 600;
@@ -121,6 +127,9 @@
     .login-form-wrap{
         width: 33.5rem;
         background-color: $body-color;
+        button{
+            i{color: $primary-color;}
+        }
     }
 }
 .shipping{
@@ -141,10 +150,15 @@
     background-color: $bg-color;
     padding-bottom: 8rem;
     .pay-wrap{ 
-        width: 31rem;
+        width: 64rem;
         
         .pay-layout{
             background-color: $body-color;
+            ul{
+                li{
+                    button{color: $primary-color}
+                }
+            }
             .tab-content{
                 .save-card{
                     .card-layout{
@@ -195,9 +209,28 @@
                         border: 1px solid $primary-color !important;
                     }
                 }
+                .active{
+                    display: block;
+                }
+                .pay-rv-num{
+                    // display: none;
+                }
+                
+            }
+        }
+
+        .coupon-form{
+            background-color: $bg-color;
+            .coupon-form-wrap{
+                width: 100%;
+                background-color: $body-color;
+                i{color: $primary-color}
             }
         }
         
+        .order-sum{
+            background-color: $body-color;
+        }
     }
 }
 // payment page css end
@@ -211,12 +244,15 @@
         
         .table-layout{
             background-color: $body-color;
+            .order-num{
+                background-color: $primary-color-light;
+            }
             .table{
                 font-size: 1rem;
-                width: 68rem;
+                width: 64rem;
                 .thead{ font-size: .9rem;}
                 .cart-item-name{
-                    width: 480px;
+                    max-width: 480px;
                 }
                 .total{font-weight: 600; color: $title-color;}
                 .qty-layout{
@@ -252,3 +288,61 @@
 }
 
 // order confirm css end
+
+
+//media quary start
+@media (max-width: 576px){
+    .my-cart{
+        padding-top: 8rem;
+        .card{
+            background-color: $bg-color;
+            text-align: center;
+            i{
+                font-size: 1.5rem !important;
+            }
+        }
+    }
+
+    .cart-table{
+        .table{
+            font-size: .75rem !important;
+            width: 40rem !important;
+            overflow-x: auto;
+        }
+    }
+
+    .shipping , .login-form{
+        font-size: .85rem !important;
+        // padding-bottom: 5rem;
+        input{
+        font-size: .75rem !important;
+        }
+        select{
+        font-size: .75rem !important;
+
+        }
+        h2{
+            button{
+                font-size: .9rem !important;
+            }
+        }
+    }
+
+    .payment{
+        .pay-layout, .coupon-form, .order-sum{
+            font-size: .85rem;
+            h6{font-size: .9rem;}
+            h2{
+                button{font-size: .9rem;}
+            }
+            button{font-size: .85rem !important; }
+            input, select{font-size: .75rem;}
+            ul{
+                li{
+                    font-size: .85rem;
+                }
+            }
+        }
+    }
+    
+}
